hphp/test/zend/good/tests-classes/class_stdclass.php
<?php

$obj = new stdClass;

echo get_class($obj)."\n";

echo "Done\n";
?>